--- a/test.html
+++ b/test.html
@@ -4,6 +4,8 @@
 	<body>
 		<script src="index.js"></script>
 		<script>
+			var extend = require('./index').extend;
+
 			var obj1 = { name: "Vitor" };
 			var obj2 = { lastName: "Mattos" };
 
@@ -12,11 +14,19 @@
 			console.log(obj1);
 
 			var obj3 = { age: 20 };
-			var obj4 = { gender: 'male' };
+			var obj4 = { 
+				nestedObject: {
+					gender: 'male',
+
+					thirdLevelObject: {
+						value: 300
+					}
+				}
+			};
 
 			extend(obj1, obj3, obj4);
 
-			console.log(obj1);
+			console.dir(obj1);
 		</script>
 	</body>
 	</html>
